[gd_scene load_steps=6 format=3 uid="uid://b5mj7cun77wcv"]

[ext_resource type="Script" path="res://Actors/Beacon/beacon.gd" id="1_jlc38"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kmhkm"]
size = Vector2(63, 63)

[sub_resource type="Gradient" id="Gradient_us85w"]
offsets = PackedFloat32Array(0, 0.520767, 1)
colors = PackedColorArray(1, 1, 1, 1, 0.520767, 0.520767, 0.520767, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_2q053"]
gradient = SubResource("Gradient_us85w")
fill = 1
fill_from = Vector2(0.504274, 0.482906)
fill_to = Vector2(0.799145, 0.128205)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n40ib"]
size = Vector2(2821, 264)

[node name="Beacon" type="Node2D"]
script = ExtResource("1_jlc38")
weapon_type = 1

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-0.5, 0.5)
shape = SubResource("RectangleShape2D_kmhkm")
debug_color = Color(0.909804, 0, 0.733333, 0.419608)

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = SubResource("GradientTexture2D_2q053")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(1395.5, 0)
shape = SubResource("RectangleShape2D_n40ib")

[node name="areaShape" type="Polygon2D" parent="Area2D"]
color = Color(0.886275, 0.384314, 0, 0.345098)
polygon = PackedVector2Array(-15, -131, 2822, -140, 2817, 141, -18, 141)

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
