[gd_scene load_steps=10 format=3 uid="uid://bagqr82ch7qvh"]

[ext_resource type="Script" path="res://Actors/Beacon/beacon.gd" id="1_8r403"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eh0t8"]
size = Vector2(76, 76)

[sub_resource type="CircleShape2D" id="CircleShape2D_1scsm"]
radius = 165.012

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kmhkm"]
size = Vector2(63, 63)

[sub_resource type="Gradient" id="Gradient_us85w"]
offsets = PackedFloat32Array(0, 0.520767, 1)
colors = PackedColorArray(1, 1, 1, 1, 0.520767, 0.520767, 0.520767, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_2q053"]
gradient = SubResource("Gradient_us85w")
fill = 1
fill_from = Vector2(0.504274, 0.482906)
fill_to = Vector2(0.799145, 0.128205)

[sub_resource type="Theme" id="Theme_di6bf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jqyj3"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.317647, 0.266667, 0.305882, 1)
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0apm1"]
bg_color = Color(0.219608, 0.862745, 0.203922, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.8, 0.8, 0.8, 0)

[node name="Beacon" type="AnimatableBody2D"]
y_sort_enabled = true
collision_mask = 34
script = ExtResource("1_8r403")
weapon_type = 1

[node name="hitbox" type="Area2D" parent="."]
collision_mask = 34

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_eh0t8")

[node name="beacon_halo" type="Area2D" parent="."]
collision_mask = 14

[node name="visibleShape" type="Polygon2D" parent="beacon_halo"]
position = Vector2(2.8265, 2.71948)
scale = Vector2(0.672761, 0.678878)
color = Color(0, 0, 0, 0.345098)
polygon = PackedVector2Array(-1, -250, 60, -242, 123, -215, 171, -177, 210, -127, 233, -71, 245, -18, 239, 53, 211, 122, 170, 176, 122, 213, 59, 241, -2, 247, -62, 239, -125, 214, -177, 174, -216, 122, -239, 64, -245, -2, -237, -68, -219, -133, -173, -185, -125, -218, -68, -239)

[node name="haloShape" type="CollisionShape2D" parent="beacon_halo"]
shape = SubResource("CircleShape2D_1scsm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 0.5)
shape = SubResource("RectangleShape2D_kmhkm")
debug_color = Color(0.909804, 0, 0.733333, 0.419608)

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.360784, 0.360784, 0.360784, 1)
texture = SubResource("GradientTexture2D_2q053")

[node name="Polygon2D" type="Polygon2D" parent="Sprite2D"]
position = Vector2(-17, 1)
scale = Vector2(0.391304, 1.3625)
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(-23, -1, 10.2222, -80.7339, 30.6667, -80.7339, 23, 0)

[node name="Polygon2D2" type="Polygon2D" parent="Sprite2D"]
position = Vector2(13, 1)
scale = Vector2(0.391304, 1.3625)
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(-23, -1, -20.4444, -81.4679, -5.11111, -83.6697, 23, 0)

[node name="Polygon2D3" type="Polygon2D" parent="Sprite2D"]
position = Vector2(-1, -106)
scale = Vector2(0.804348, 0.275)
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(-23, -1, -15, -80, 15, -79, 23, 0)

[node name="Polygon2D4" type="Polygon2D" parent="Sprite2D"]
position = Vector2(19, -149)
scale = Vector2(0.804348, 0.275)
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(-12.4324, 98.1818, -4.97298, 7.27277, 7.45946, -25.4545, 1.4099, 70.3647, -1.24324, 127.273)

[node name="Polygon2D5" type="Polygon2D" parent="Sprite2D"]
position = Vector2(-15, -144)
scale = Vector2(0.567775, 0.275)
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(-10.5676, 94.5455, -19.3739, -47.2727, -5.28378, -14.5454, 8.8063, 72.7273)

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -51.0
offset_top = -178.0
offset_right = 50.0
offset_bottom = -171.0
theme = SubResource("Theme_di6bf")
theme_override_styles/background = SubResource("StyleBoxFlat_jqyj3")
theme_override_styles/fill = SubResource("StyleBoxFlat_0apm1")
value = 50.0
show_percentage = false
